--- a/ld15.html
+++ b/ld15.html
@@ -263,7 +263,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0001.jpg" alt="">
+                    <img src="/img/com-picture01/0001.jpg" alt="product01">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -284,7 +284,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0003.jpg" alt="">
+                    <img src="/img/com-picture01/0003.jpg" alt="product02">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -305,7 +305,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0004.jpg" alt="">
+                    <img src="/img/com-picture01/0004.jpg" alt="product03">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -326,7 +326,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0005.jpg" alt="">
+                    <img src="/img/com-picture01/0005.jpg" alt="product04">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -342,6 +342,7 @@
         
 
     </div>
+
     <!-- 更多商品按鈕 -->
     <div >        
         <div class="button-moreproduct">
