--- a/ld15.html
+++ b/ld15.html
@@ -92,8 +92,7 @@
             float:left;
             width: 220px;
             height: 350px;
-            /* border: 1px dotted #efc7c1; */
-            margin-left: 10px;
+            margin-left: 10px;;
             margin-right: 10px;
             margin-bottom: 20px;
             padding-right: 5px;
@@ -263,7 +262,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0001.jpg" alt="product01">
+                    <img src="/img/compicture01/0001.jpg" alt="product01">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -284,7 +283,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0003.jpg" alt="product02">
+                    <img src="/img/compicture01/0003.jpg" alt="product02">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -305,7 +304,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0004.jpg" alt="product03">
+                    <img src="/img/compicture01/0004.jpg" alt="product03">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
@@ -326,7 +325,7 @@
                     </a>
                 </div>
                 <a href="#">
-                    <img src="/img/com-picture01/0005.jpg" alt="product04">
+                    <img src="/img/compicture01/0005.jpg" alt="product04">
                 </a>
                 <a href="#">
                     <h2>簡約圖藤</h2>        
