--- a/ld15.html
+++ b/ld15.html
@@ -395,6 +395,37 @@
             </ul>
         </div>
     </div>
+    <div class="productfeatured">
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="img/image/0001.jpg" alt="featured1">
+                        <h2>極簡系列</h2>
+                        <p>簡約的線條構成,極簡冷淡的個性</p>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="img/image/0003.jpg" alt="featured1">
+                        <h2>極簡系列</h2>
+                        <p>簡約的線條構成,極簡冷淡的個性</p>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="img/image/004.jpg" alt="featured1">
+                        <h2>極簡系列</h2>
+                        <p>簡約的線條構成,極簡冷淡的個性</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 <!-- 更多組合按鈕 -->
 <div >        
     <div class="button-morefeatured">
