--- a/ld15.html
+++ b/ld15.html
@@ -113,11 +113,11 @@
             color: rgb(216, 212, 142);
             font-size: 20px;
         }            
-        .productList .like img{
+        /* .productList .like img{
             width: 30px;
             position: absolute;
             bottom: 135px;
-            right: 10px;
+            right: 10px; */
         }
         .productList .cart{
             width: 100%;
@@ -125,11 +125,11 @@
             margin: 10px 0px 10px 0px;
             background-color: rgb(70, 92, 86);
         }
-        .productList .cart img{
+        /* .productList .cart img{
             width: 30px;
             position: absolute;
             bottom: -5px;
-            left: 45%;
+            left: 45%; */
         }
 
         /* 更多商品按鈕上面距離 */
@@ -395,37 +395,7 @@
             </ul>
         </div>
     </div>
-    <div class="productfeatured">
-        <div class="container">
-            <ul>
-                <li>
-                    <a href="#">
-                        <img src="img/image/0001.jpg" alt="featured1">
-                        <h2>極簡系列</h2>
-                        <p>簡約的線條構成,極簡冷淡的個性</p>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="#">
-                        <img src="img/image/0003.jpg" alt="featured1">
-                        <h2>極簡系列</h2>
-                        <p>簡約的線條構成,極簡冷淡的個性</p>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="#">
-                        <img src="img/image/004.jpg" alt="featured1">
-                        <h2>極簡系列</h2>
-                        <p>簡約的線條構成,極簡冷淡的個性</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+
 <!-- 更多組合按鈕 -->
 <div >        
     <div class="button-morefeatured">
