--- a/movie.html
+++ b/movie.html
@@ -133,7 +133,7 @@
     </div>
     <div class="button-container">
         <button class="button">
-            <a href="#">開始選圖</a>
+            <a href="ld15.html">開始選圖</a>
             
         </button>
     </div>
