--- a/ld15.html
+++ b/ld15.html
@@ -98,7 +98,7 @@
         }
         .productList .product .img{
             height: 240px;
-            width: 240px;
+            width: 100%;
         }
         .productList .product a{
             
@@ -254,6 +254,7 @@
         </ul>
 
     </div>
+    <!-- 商品清單 -->
 
     <div class="productList">
         <div class="container">
@@ -261,7 +262,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0003.jpg" class="img" alt="product01">
+                         <img src="/img/001.jpg" class="img" alt="pr04">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -285,7 +286,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0003.jpg" class="img" alt="product01">
+                         <img src="/img/image/0004.jpg" class="img" alt="pr03">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -309,7 +310,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0003.jpg" class="img" alt="product01">
+                         <img src="/img/image/0005.jpg" class="img" alt="pr02">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -333,7 +334,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0003.jpg" class="img" alt="product01">
+                         <img src="/img/image/0001.jpg" class="img" alt="pr01">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
