--- a/movie.html
+++ b/movie.html
@@ -101,7 +101,7 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="#" class="logo">
+            <a href="ld15.html" class="logo">
                 <img src="img/icon/ld15-w.svg" alt="ld15logo">
             </a>
             <nav class="main-nav">
