--- a/ld15.html
+++ b/ld15.html
@@ -296,7 +296,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/001.jpg" class="img" alt="pr04">
+                         <img src="img/001.jpg" class="img" alt="pr04">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -320,7 +320,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0004.jpg" class="img" alt="pr03">
+                         <img src="img/image/0004.jpg" class="img" alt="pr03">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -344,7 +344,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0005.jpg" class="img" alt="pr02">
+                         <img src="img/image/0005.jpg" class="img" alt="pr02">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -368,7 +368,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0001.jpg" class="img" alt="pr01">
+                         <img src="img/image/0001.jpg" class="img" alt="pr01">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -392,7 +392,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0004.jpg" class="img" alt="pr01">
+                         <img src="img/image/0004.jpg" class="img" alt="pr01">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -416,7 +416,7 @@
                 <li>
                     <div class="product">
                          <a href="#">
-                         <img src="/img/image/0003.jpg" class="img" alt="pr01">
+                         <img src="img/image/0003.jpg" class="img" alt="pr01">
                          </a>
                          <a href="#">
                          <h3>簡約圖案</h3>
@@ -525,7 +525,7 @@
             <li>
                 <div class="card">
                     <a href="#">
-                        <img src="/img/fan/f01.jpg" alt="fan-img01">
+                        <img src="img/fan/f01.jpg" alt="fan-img01">
                     </a>                    
                     <h5>love233412tani</h5>
                     <p>使用快速，可常常替換，隨心情換圖真的很棒</p>
